--- a/SASS/_index.scss
+++ b/SASS/_index.scss
@@ -12,6 +12,8 @@
         grid-row: 2/3;
         display: flex;
         flex-direction: column;
+        justify-items: center;
+        align-items: center;
         h2{
 
             color: $colorFontAlt;
@@ -24,14 +26,21 @@
         a{
 
             color: $colorFontAlt;
+            width: 450px;
             text-align: center;
             font-size: 35px;
             text-decoration: none;
             font-family: $fuente;
             font-weight: 700;
+            border-style: solid;
+            border-width: 0.5px;
+            border-radius: 20px;
             &:hover {
 
-                color: $colorHover;
+                background-color: $colorFontAlt;
+                color:$colorFont;
+                border-style: none;
+                opacity: 85%;
             }
         }
 
@@ -128,7 +137,7 @@
         }
         h2 {
 
-            font-size: 45px;
+            font-size: 40px;
             margin-left: 15px;
             margin-right: 15px;
          }
@@ -155,6 +164,46 @@
 
             width: 350px;
             height: 310px;
+            border-radius: 5px;
+        }
+    }
+}
+
+@media (min-width: 481px ) and (max-width:$tablet) {
+    .inicio {
+
+        background-position: center;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 260px 260px 260px;
+        align-items: center;
+        a{
+
+            display: none;
+        }
+        h2 {
+
+            font-size:35px;
+         }
+     
+    }
+
+    .productos{
+
+        &__destacados{
+
+         display: flex;
+         flex-direction: column;
+         align-items: center;
+         &__style {
+
+             display: flex;
+             flex-direction: column;
+             align-items: center;
+            }
+        }
+        img {
+
             border-radius: 5px;
         }
     }
