--- a/SASS/_tienda.scss
+++ b/SASS/_tienda.scss
@@ -138,5 +138,74 @@
         }
     }
 
+}
 
+@media (min-width: 481px ) and (max-width:$tablet) {
+
+    .tienda {
+
+        display: grid;
+        grid-template-columns: 1fr;
+        max-height: 3000px;
+        grid-template-rows: 150px auto;
+        form .buscar{
+
+            height: 40px;
+            width: 15%;
+            border-radius: 10px;
+        }
+        form .barraBus{
+
+            border-radius: 10px;
+            width: 65%;
+            height: 40px;
+        }
+        &__productos {
+
+            display: flex;
+            gap: 50px;
+            justify-content: center;
+            margin-bottom: 80px;
+            margin-left: 30px;
+            margin-right: 30px;
+            flex-direction: row;
+            align-items: center;
+            flex-wrap: wrap;
+            &__style{
+    
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                background-color: #f9feff;
+                height: 200px;
+                width: 300px;
+                border-radius: 10px;
+                img{
+
+                    height: 180px;
+                    width: 180px;
+                    border-radius: 70px;
+                }
+                h2{
+
+                    font-size: 25px;
+                    text-align: center;
+                    font-weight: bold;
+                    margin: 0 5px;
+                }
+                p{
+
+                    font-size: 15px;
+                    font-weight: bold;
+                    text-align: center;
+                    margin: 5px 5px;
+                }
+            }
+         .movilTienda{
+            
+             display: flex;
+             flex-direction: column;
+            }
+        }
+    }
 }
