--- a/SASS/_variables.scss
+++ b/SASS/_variables.scss
@@ -4,5 +4,6 @@ $colorFontAlt:#f9feff;
 $colorHover:#6eba9d;
 $colorFooter:#1b2727;
 $movil: 480px;
+$tablet: 1023px;
 $fuente:'Hind Madurai', sans-serif;
 $boxShadow: 5px 5px 12px 0 #202224;
