--- a/SASS/main.css
+++ b/SASS/main.css
@@ -94,6 +94,43 @@
     font-weight: bold;
   }
 }
+@media (min-width: 481px) and (max-width: 1023px) {
+  .header {
+    padding-top: 1px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 60px 80px;
+  }
+  .header__titulo {
+    display: flex;
+    justify-content: center;
+  }
+  .header__nav {
+    grid-column: 1/2;
+  }
+  .header__nav__links {
+    display: none;
+  }
+  .header__navMovil {
+    grid-row: 2/3;
+    display: flex;
+    justify-content: space-around;
+  }
+  .header__navMovil__style {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .header__navMovil__style img {
+    width: 60px;
+    height: 60px;
+  }
+  .header__navMovil__style p {
+    font-size: 14px;
+    font-weight: bold;
+  }
+}
 .inicio {
   background-image: url(../img/index\ img.jpeg);
   background-size: cover;
@@ -107,6 +144,8 @@
   grid-row: 2/3;
   display: flex;
   flex-direction: column;
+  justify-items: center;
+  align-items: center;
 }
 .inicio__texto h2 {
   color: #f9feff;
@@ -117,14 +156,21 @@
 }
 .inicio__texto a {
   color: #f9feff;
+  width: 450px;
   text-align: center;
   font-size: 35px;
   text-decoration: none;
   font-family: "Hind Madurai", sans-serif;
   font-weight: 700;
+  border-style: solid;
+  border-width: 0.5px;
+  border-radius: 20px;
 }
 .inicio__texto a:hover {
-  color: #6eba9d;
+  background-color: #f9feff;
+  color: #363636;
+  border-style: none;
+  opacity: 85%;
 }
 
 .productos {
@@ -202,7 +248,7 @@
     display: none;
   }
   .inicio h2 {
-    font-size: 45px;
+    font-size: 40px;
     margin-left: 15px;
     margin-right: 15px;
   }
@@ -221,6 +267,34 @@
   .productos img {
     width: 350px;
     height: 310px;
+    border-radius: 5px;
+  }
+}
+@media (min-width: 481px) and (max-width: 1023px) {
+  .inicio {
+    background-position: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 260px 260px 260px;
+    align-items: center;
+  }
+  .inicio a {
+    display: none;
+  }
+  .inicio h2 {
+    font-size: 35px;
+  }
+  .productos__destacados {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .productos__destacados__style {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .productos img {
     border-radius: 5px;
   }
 }
@@ -320,6 +394,65 @@
     background-color: #f9feff;
     height: 200px;
     width: 350px;
+    border-radius: 10px;
+  }
+  .tienda__productos__style img {
+    height: 180px;
+    width: 180px;
+    border-radius: 70px;
+  }
+  .tienda__productos__style h2 {
+    font-size: 25px;
+    text-align: center;
+    font-weight: bold;
+    margin: 0 5px;
+  }
+  .tienda__productos__style p {
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    margin: 5px 5px;
+  }
+  .tienda__productos .movilTienda {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media (min-width: 481px) and (max-width: 1023px) {
+  .tienda {
+    display: grid;
+    grid-template-columns: 1fr;
+    max-height: 3000px;
+    grid-template-rows: 150px auto;
+  }
+  .tienda form .buscar {
+    height: 40px;
+    width: 15%;
+    border-radius: 10px;
+  }
+  .tienda form .barraBus {
+    border-radius: 10px;
+    width: 65%;
+    height: 40px;
+  }
+  .tienda__productos {
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+    margin-bottom: 80px;
+    margin-left: 30px;
+    margin-right: 30px;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .tienda__productos__style {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: #f9feff;
+    height: 200px;
+    width: 300px;
     border-radius: 10px;
   }
   .tienda__productos__style img {
@@ -446,6 +579,45 @@
   .clientes__info__frame iframe {
     height: 250px;
     width: 250px;
+  }
+  .clientes__info__frame h3 {
+    padding-left: 0;
+    padding-bottom: 3px;
+  }
+}
+@media (min-width: 481px) and (max-width: 1023px) {
+  .quienesSomos__img {
+    display: none;
+  }
+  .clientes__info {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+  }
+  .clientes__info__style {
+    padding-right: 0%;
+    border-right-style: none;
+    align-items: center;
+    justify-content: center;
+  }
+  .clientes__info__style img {
+    height: 400px;
+    width: 400px;
+  }
+  .clientes__info__style h3 {
+    padding-right: 0;
+    padding-bottom: 3px;
+  }
+  .clientes__info__frame {
+    align-items: center;
+    padding-left: 0;
+    border-left-style: none;
+  }
+  .clientes__info__frame iframe {
+    height: 400px;
+    width: 400px;
   }
   .clientes__info__frame h3 {
     padding-left: 0;
@@ -626,6 +798,26 @@
     width: 350px;
   }
 }
+@media (min-width: 481px) and (max-width: 1023px) {
+  .sub {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1500px;
+  }
+  .sub__texto p {
+    margin-bottom: 12px;
+  }
+  .sub__planes {
+    display: flex;
+    gap: 40px;
+    flex-direction: column;
+    align-items: center;
+  }
+  .sub__planes__style {
+    height: 450px;
+    width: 350px;
+  }
+}
 .pie {
   padding-top: 20px;
   background-color: #1b2727;
@@ -705,6 +897,25 @@
 @media (max-width: 480px) {
   .pie {
     font-size: 15px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 100px 1fr;
+  }
+  .pie__texto {
+    grid-row: 1/2;
+    grid-column: 1/2;
+  }
+  .pie__links {
+    display: none;
+  }
+  .pie__contacto {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+}
+@media (min-width: 481px) and (max-width: 1023px) {
+  .pie {
+    font-size: 20px;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 100px 1fr;
