--- a/SASS/_index.scss
+++ b/SASS/_index.scss
@@ -83,7 +83,8 @@
         justify-content: center;
         &__style{
 
-            background-color: #d1c7bd;
+            /* background-color: #e8dbcb; */
+            background-image: linear-gradient(to top, #e8dbcb, #e2b9b3 55% );
             border-radius: 15px;
             width: 400px;
             height: 500px;
@@ -111,12 +112,13 @@
                 height: 35px;
                 width: 180px;
                 border-radius: 10px;
-                background-color: #558673;
+                background-color: #839973;
                 border-style: none;
-                color: $colorFontAlt;
+                color: #36374b;
+                font-weight: 700;
                 &:hover{
 
-                    background-color: #75af99;
+                    background-color: #a1bc8f;
                 }
             }
         }
