--- a/SASS/_index.scss
+++ b/SASS/_index.scss
@@ -1,6 +1,6 @@
 .inicio{
 
-    background-image: url(../img/index\ img.jpeg);
+    background-image: url(../img/indexImg.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     display: grid;
