--- a/SASS/main.css
+++ b/SASS/main.css
@@ -132,7 +132,7 @@
   }
 }
 .inicio {
-  background-image: url(../img/index\ img.jpeg);
+  background-image: url(../img/indexImg.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
   display: grid;
