--- a/SASS/_variables.scss
+++ b/SASS/_variables.scss
@@ -5,4 +5,4 @@ $colorHover:#6eba9d;
 $movil: 480px;
 $tablet: 1023px;
 $fuente:'Hind Madurai', sans-serif;
-$boxShadow: 5px 5px 12px 0 #202224;
+$boxShadow:0px 0px 18px 2px #000000;
