--- a/SASS/_quienesSomos.scss
+++ b/SASS/_quienesSomos.scss
@@ -1,22 +1,59 @@
 .quienesSomos {
 
-    background-color: #202224;
+    background-image: radial-gradient(ellipse 500px 250px, #2a2a2a, #202020 );
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-row: 1fr;
     &__info{
+
+        display: flex;
+        align-items: center;
+        flex-direction: column;
 
         h2{
 
             font-family: $fuente;
             color: $colorFontAlt;
             font-weight: 700;
-            padding: 5px;
-            font-size: 40px;
+            padding-top: 30px;
+            padding-bottom: 3px;
+            font-size: 4rem;
+            text-align: center;
         }
         p{
 
             font-family: $fuente;
             color: $colorFontAlt;
-            font-size: 18px;
+            font-size: 2rem;
+            text-align: center;
+            padding-left: 75px;
+            padding-right: 75px;
         }
+        a{
+
+            text-decoration: none;
+            font-size: 3rem;
+            color: $colorFontAlt;
+            font-family: $fuente;
+            font-weight: 700;
+            margin-top: 40px;
+            background-image: radial-gradient(circle, #2999ad, #41e975 );
+            text-align: center;
+            border-radius: 3px;
+            height: 50px;
+            width: 420px;
+            box-shadow:0px 0px 5px 1px #41e975;
+            &:hover{
+
+                color: #d3e6a2;
+            }
+        }
+    }
+    &__img{
+
+        display: flex;
+        justify-content: flex-end;
+
     }
 }
 
@@ -26,13 +63,13 @@
     h2{
 
         text-align: center;
-        font-size: 50px;
+        font-size: 5rem;
         font-weight: bold;
         padding-bottom: 5px;
     }
     &__info{
 
-        background-color: #202224;
+        background-image: radial-gradient(ellipse 700px 350px, #2a2a2a, #202020 );
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr;
@@ -45,7 +82,6 @@
             justify-content: center;
             align-items: flex-end;
             padding-right: 2%;
-            border-right-style: solid;
             img{
 
                 height: 400px;
@@ -54,7 +90,7 @@
             }
             h3 {
 
-                font-size: 35px;
+                font-size: 3rem;
                 font-weight: 500;
                 color: $colorFontAlt;
                 padding-right: 12%;
@@ -70,10 +106,9 @@
             justify-content: center;
             align-items: flex-start;
             padding-left: 2.4% ;
-            border-left-style: solid;
             h3{
 
-                font-size: 35px;
+                font-size: 3rem;
                 font-weight: 500;
                 color: #efe9e1;
                 padding-left: 12%;
@@ -90,12 +125,32 @@
 
     .quienesSomos {
 
+     display: grid;
+     grid-template-columns: 1fr;
         &__img{
 
             display: none;
         }
-    }
+        &__info{
 
+            h2{
+
+                font-size: 3rem;
+                padding-top: 15px;
+            }
+            p{
+
+                font-size: 1.8rem;
+                padding-left: 30px;
+                padding-right: 30px;
+            }
+            a{
+
+                display: none;
+            }
+        }
+    }
+    
     .clientes {
 
         &__info{
@@ -136,20 +191,29 @@
                 padding-left: 0;
                 padding-bottom: 3px;
             }
+          }
         }
-        }
-    }
+    } 
+
 }
 
 @media (min-width: 481px ) and (max-width:$tablet) {
 
     .quienesSomos {
 
-        &__img{
-
-            display: none;
+        display: grid;
+        grid-template-columns: 1fr;
+           &__img{
+   
+               display: none;
+           }
+           &__info{
+               a{
+                margin-bottom: 25px;
+               }
+           }
         }
-    }
+    
 
     .clientes {
 
@@ -193,7 +257,7 @@
                 padding-left: 0;
                 padding-bottom: 3px;
             }
-        }
+          }  
         }
     }
 }
